--- a/Fußball.html
+++ b/Fußball.html
@@ -23,8 +23,12 @@
             </tr>
         </table>
     </header>
-    
-    <h2>The Path</h2>
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+        <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+            <span class="text-xl font-semibold">The Path</span>
+            <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+        </button>
+        <div class="accordion-content px-6 py-4">
     <p> The path to becoming a professional in football requires not only technique and fitness but also mental strength. 
         <br>A player in the 3rd league and a Bundesliga player often differ not in technique, but in fitness and conditioning.
         <br>Bundesliga players are fitter and more influential on the field due to their better physical condition, supported by targeted strength training and conditioning.
@@ -39,9 +43,15 @@
         <img src="Paul Wanner.png" alt="Paul Wanner">
         <figcaption>Figure 1</figcaption> 
     </figure>
+        </div>
+    </div>
     <br>
-
-    <h2>Our Opportunities</h2>
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+        <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+            <span class="text-xl font-semibold">Our Opportunities</span>
+            <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+        </button>
+        <div class="accordion-content px-6 py-4">
     <p>  Professional football in Germany or internationally. Entry into youth development centers (NLZ). Opportunities in leagues like Bundesliga, Premier League, La Liga. 
     <br>
     Discipline and consistency are key to overcoming setbacks and staying on the right path. 
@@ -52,8 +62,16 @@
     <br>With our help, you will become more visible to scouts and clubs. We offer you access to national and international leagues and help you carefully plan your career.
     </p> 
     <br>
+        </div>
+    </div>
+    <br>
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+        <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+            <span class="text-xl font-semibold">What we offer:</span>
+            <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+        </button>
+        <div class="accordion-content px-6 py-4">
     <ul>
-        <li><strong>What we offer:</strong></li>
         <li>Referral to youth development centers and clubs.</li>
         <li>Creation of a compelling highlight video.</li>
         <li>Direct contacts with talent scouts.</li>
@@ -64,9 +82,17 @@
         <img src="Eintracht Braunschweig NLZ.png" alt="Youth Development Center">
         <figcaption>Figure 2</figcaption> 
     </figure>
+        </div>
+    </div>
+    <br>
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+        <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+            <span class="text-xl font-semibold">Your Benefits:</span>
+            <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+        </button>
+        <div class="accordion-content px-6 py-4">
     <ul>     
         <br>
-        <li><strong>Your Benefits:</strong></li>
         <li>Higher visibility to scouts and clubs.</li>
         <li>Preparation for professional requirements.</li>
         <li>Access to national and international leagues.</li>
@@ -78,9 +104,17 @@
         <img src="Fussball Scouts.png" alt="Scouts">
         <figcaption>Figure 3</figcaption> 
     </figure>
+</div>
+    </div>
+    <br>
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+        <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+            <span class="text-xl font-semibold">How does it work?</span>
+            <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+        </button>
+        <div class="accordion-content px-6 py-4">
     <ul>
         <br>
-        <li><strong>How does it work?</strong></li>
         <li>You send us your highlight video.</li>
         <li>We analyze your performance and give feedback.</li>
         <li>You receive tailored suggestions.</li>
@@ -91,16 +125,25 @@
         <img src="Mann am PC.png" alt="Youth Development Center">
         <figcaption>Figure 4</figcaption> 
     </figure>
+    </div>
+    </div>
     <br>
     <br>
     <br>
 
     <br>
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+        <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+            <span class="text-xl font-semibold">Quellen</span>
+            <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+        </button>
+        <div class="accordion-content px-6 py-4">
     <a href="https://www.laola1.at/de/red/fussball/international/deutschland/bundesliga/news/weisheitszaehne-zwingen-paul-wanner-zu-trainings-pause/ " class="link" >Figure 1 / Paul Wanner / 16.01.25</a>
     <a href="https://www.eintracht.com/teams/nachwuchs/news/artikel/jahresrueckblick-des-nlz " target="_blank">Figure 2 / Youth Player / 16.01.25</a>
     <a href="https://thepfsa.co.uk/de/how-to-get-scouted-for-football/ " target="_blank">Figure 3 / Scouts / 16.01.25</a>
     <a href="https://de.freepik.com/fotos-vektoren-kostenlos/mensch-computer " target="_blank">Figure 4 / Man at PC / 16.01.25</a>
-
+        </div>
+    </div>
     <footer>
         <p class="pf">&copy; 2025 Grid Iron Sports</p>
     </footer>
