--- a/basketball.html
+++ b/basketball.html
@@ -22,8 +22,12 @@
             </tr>
         </table>
     </header>
-
-    <h2>The Path</h2>
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+    <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+        <span class="text-xl font-semibold"> The Path</span>
+        <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+    </button>
+    <div class="accordion-content px-6 py-4">
     <p>Do you dream of playing basketball in the USA? We offer the necessary support to advance your sports career, 
         whether it's in high school, college, or a league. With our help, you can significantly increase your chances 
         of breaking into the NBA or the German Bundesliga. 
@@ -37,10 +41,16 @@
             <figcaption>Figure 1</figcaption> 
         </figure>
     </p>
+    </div>
+    </div>
     <br>
-
-    <h2>Our Opportunities</h2>
-    <p>The path to becoming a basketball pro requires talent, hard work, and the right mindset. 
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+    <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+        <span class="text-xl font-semibold">Our Opportunities</span>
+        <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+    </button>
+    <div class="accordion-content px-6 py-4">
+        <p>The path to becoming a basketball pro requires talent, hard work, and the right mindset. 
         <br>First, it's important to master the basic skills such as ball handling, shooting, and defense. 
         <br>Additionally, players need to improve their physical fitness through endurance, strength training, and speed. 
         <br>Mental strength is also crucial – a pro must handle pressure, overcome setbacks, and constantly work on improving.
@@ -55,10 +65,16 @@
         <img src="Basketball 4.jpg" alt="">
         <figcaption>Figure 2</figcaption> 
     </figure>
+    /</div>
+    </div>
     <br>
-
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+        <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+            <span class="text-xl font-semibold"> What we offer:</span>
+            <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+        </button>
+        <div class="accordion-content px-6 py-4">
     <ul>
-        <li><strong>What we offer:</strong></li>
         <li>Creation of a professional highlight video.</li>
         <li>Application assistance for schools and clubs.</li>
         <li>Direct contacts with scouts and coaches.</li>
@@ -69,11 +85,17 @@
         <img src="Basketball 6.png" alt="">
         <figcaption>Figure 3</figcaption> 
     </figure>
-
+    </div>
+    </div>
     <br>
-
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+        <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+            <span class="text-xl font-semibold">Your benefits:</span>
+            <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+        </button>
+        <div class="accordion-content px-6 py-4">
     <ul>
-        <li><strong>Your benefits:</strong></li>
+        <li><strong></strong></li>
         <li>Better chances of obtaining a scholarship in the USA.</li>
         <li>Improvement of your playing level.</li>
         <li>Personal coaching from sports experts.</li>
@@ -85,10 +107,16 @@
         <img src="Basketball 7.png" alt="">
         <figcaption>Figure 4</figcaption> 
     </figure>
+    </div>
+    </div>
     <br>
-
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+        <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+            <span class="text-xl font-semibold">How it works:</span>
+            <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+        </button>
+        <div class="accordion-content px-6 py-4">
     <ul>
-        <li><strong>How it works:</strong></li>
         <li>You send us your highlight video.</li>
         <li>We analyze your potential and provide feedback.</li>
         <li>You receive suitable options for your application.</li>
@@ -99,6 +127,8 @@
         <img src="Basketball 8.png" alt="">
         <figcaption>Figure 5</figcaption> 
     </figure>
+    </div>
+    </div>
     <br>
     <br>
     <br>
