--- a/kontakt.html
+++ b/kontakt.html
@@ -22,13 +22,24 @@
             </tr>
         </table>
     </header>
-
-    <h1>Contact</h1>
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+        <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+            <span class="text-xl font-semibold"> Contact</span>
+            <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+        </button>
+        <div class="accordion-content px-6 py-4">
     <p>Phone: +49 03514029130</p>
     <p>Email: Grid.iron.sports.original@gmail.com</p>
     <p>Cämmerswalder Straße 01189 Dresden</p>
-
-    <h1>About Us</h1>
+    </div>
+    </div>
+    <br>
+    <div class="accordion-item bg-white rounded-lg shadow-md overflow-hidden">
+        <button class="accordion-header w-full text-left px-6 py-4 bg-gray-50 hover:bg-gray-100 transition duration-300 focus:outline-none" aria-expanded="false">
+            <span class="text-xl font-semibold"> About US</span>
+            <span class="accordion-icon float-right transform transition-transform duration-300">&#9660;</span>
+        </button>
+        <div class="accordion-content px-6 py-4">
     <p>We, Tim, Oskar, Lennart, and Jonas, are the founders of a sports recruiting website that connects talented athletes with the best teams and training opportunities worldwide.
         <br>Each of us brings expertise from a different sport: Jonas and Oskar in football, Lennart in basketball, and Tim in American football. 
         <br>
